[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wafer_viewer"
version = "0.1.0"
description = "A web app for visualizing wafer chip data."
authors = [
    { name="Your Name", email="your@email.com" }
]
requires-python = ">=3.7"
dependencies = [
    "flask",
    "pandas",
    "matplotlib",
    "numpy",
    "seaborn"
    ]

[project.optional-dependencies]
dev = [
    "flask",
    "matplotlib",
    "numpy",
    "seaborn",
    "pydantic",
    "scipy",
    "melt_data_layer[all] @ git+https://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@github.com/meliolabs/Melt_Dal.git@develop#egg=melt_data_layer"
]